@@ -1,3 +1,11 @@
+2008-03-03  yetist  <yetist@gmail.com>
+
+	* lunar/calendar.patch: 
+	* lunar/lunar-calendar.c: 
+	* lunar/lunar-date.c: 
+	* po/zh_CN.po: 
+	use pinyin on "C" locale.
+
 === liblunar-0.2.5 released ===
 
 2008-02-25  yetist  <yetist@gmail.com>
